Fix Visual Alignment of cm-notification

--- a/src/components/cm-notification-container/cm-notification/cm-notification.scss
+++ b/src/components/cm-notification-container/cm-notification/cm-notification.scss
@@ -31,7 +31,7 @@ cm-icon-button {
 .contentContainer {
 	display: grid;
 	gap: 5px;
-	padding-top: 2px;
+	padding-top: 1px;
 
 	font-family: var(--cm-font-text);
 	color: rgba(var(--cm-color-ui-dark4-rgb), 0.9);
